[package]
name = "gaia2result-rs"
version = "0.1.0"
authors = ["Olaf Flebbe <of@oflebbe.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4"
flate2 = { version = "1.0.19", features = ["zlib"], default-features = false }
threadpool = "1.0"
csv = "1.1"
serde = { version = "1", features = ["derive"] }

[profile.release]
debug = true
