[package]
name = "gaia2result-rs"
version = "0.1.0"
authors = ["Olaf Flebbe <of@oflebbe.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4"
flate2 = "1.0" # { version = "1.0.19", features = ["zlib-ng-compat"], default-features = false }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
rayon = "1.5"
crossbeam-channel = "0.5"

[profile.release]
debug = true
